--- a/index.html
+++ b/index.html
@@ -15,35 +15,47 @@
   </head>
   <body>
     <nav class="container left-sidebar">
-      <img class="profile-button" src="./imgs/Logo.png" alt="Profile" />
+      <img class="profile-button button" src="./imgs/Logo.png" alt="Profile" />
       <div class="vertical-container center-of-sidebar">
-        <img class="left-sidebar-icons" src="./imgs/Vector-4.svg" alt="Home" />
-        <img class="left-sidebar-icons" src="./imgs/Vector-3.svg" alt="Video" />
-        <img class="left-sidebar-icons" src="./imgs/Vector-2.svg" alt="Chat" />
         <img
-          class="left-sidebar-icons"
+          class="left-sidebar-icons button"
+          src="./imgs/Vector-4.svg"
+          alt="Home"
+        />
+        <img
+          class="left-sidebar-icons button"
+          src="./imgs/Vector-3.svg"
+          alt="Video"
+        />
+        <img
+          class="left-sidebar-icons button"
+          src="./imgs/Vector-2.svg"
+          alt="Chat"
+        />
+        <img
+          class="left-sidebar-icons button"
           src="./imgs/Vector-1.svg"
           alt="Calendar"
         />
         <img
-          class="left-sidebar-icons"
+          class="left-sidebar-icons button"
           src="./imgs/Vector.svg"
           alt="Settings"
         />
       </div>
-      <img class="" src="./imgs/Profile.svg" alt="Avatar" />
+      <img class="avatar button" src="./imgs/Profile.svg" alt="Avatar" />
     </nav>
     <section class="vertical-container window-section">
       <div class="vertical-container window-section-header">
         <header class="container">
           <h1 class="room-name">Class 2_Design Visual</h1>
-          <div class="container invite-button">
+          <div class="container invite-button button">
             <img
               class="add-button-image"
               src="./imgs/window-screen/Icon - Add.png"
               alt="Add button"
             />
-            <label for="add-button">Invite participant</label>
+            <p>Invite participant</p>
           </div>
         </header>
         <hr />
@@ -51,7 +63,7 @@
       <div class="vertical-container meeting-window-section">
         <div class="container window-selection-list">
           <img
-            class="control-button"
+            class="control-button button"
             src="./imgs/window-screen/Vector-1.png"
             alt="Previous button"
           />
@@ -59,7 +71,7 @@
           <div class="meeting-window"></div>
           <div class="meeting-window"></div>
           <img
-            class="control-button"
+            class="control-button button"
             src="./imgs/window-screen/Vector.png"
             alt="Next button"
           />
@@ -76,39 +88,39 @@
       </div>
       <div class="container tools">
         <img
-          class="tools-icon"
+          class="tools-icon button"
           src="./imgs/tools/Vector-6.svg"
           alt="Volume button"
         />
         <div class="container center-of-tools">
           <img
-            class="tools-icon"
+            class="tools-icon button"
             src="./imgs/tools/Vector-5.svg"
             alt="Screen View  button"
           />
           <img
-            class="tools-icon"
+            class="tools-icon button"
             src="./imgs/tools/Vector-4.svg"
             alt="Microphone Mute  button"
           />
           <img
-            class="call-button"
+            class="call-button button"
             src="./imgs/tools/Vector-3.svg"
             alt="Call button"
           />
           <img
-            class="tools-icon"
+            class="tools-icon button"
             src="./imgs/tools/Vector-2.svg"
             alt="Video button"
           />
           <img
-            class="tools-icon"
+            class="tools-icon button"
             src="./imgs/tools/Vector-1.svg"
             alt="Settings button"
           />
         </div>
         <img
-          class="tools-icon"
+          class="tools-icon button"
           src="./imgs/tools/Vector.svg"
           alt="Full screen button"
         />
@@ -122,12 +134,17 @@
             <h2 class="participant-title">Participant</h2>
             <span class="participant-quantity">(5)</span>
           </div>
-          <img src="./imgs/Right-sidebar/Icon - More.svg" alt="Expand button" />
+          <img
+            class="expand button"
+            src="./imgs/Right-sidebar/Icon - More.svg"
+            alt="Expand button"
+          />
         </header>
         <ul class="vertical-container participant-list">
           <li class="container">
             <div class="container">
               <img
+                class="button"
                 src="./imgs/Right-sidebar/avatar.svg"
                 alt="Participant Avatar"
               />
@@ -135,12 +152,12 @@
             </div>
             <div class="container video-sound-control-buttons">
               <img
-                class="vs-control-button mic-disable"
+                class="vs-control-button button mic-disable"
                 src="./imgs/Right-sidebar/Vector-1.svg"
                 alt="Microphone button"
               />
               <img
-                class="vs-control-button video-disable"
+                class="vs-control-button button video-disable"
                 src="./imgs/Right-sidebar/Vector.svg"
                 alt="Video Button"
               />
@@ -149,6 +166,7 @@
           <li class="container">
             <div class="container">
               <img
+                class="button"
                 src="./imgs/Right-sidebar/avatar.svg"
                 alt="Participant Avatar"
               />
@@ -156,12 +174,12 @@
             </div>
             <div class="container video-sound-control-buttons">
               <img
-                class="vs-control-button mic-disable"
+                class="vs-control-button button mic-disable"
                 src="./imgs/Right-sidebar/Vector-1.svg"
                 alt="Microphone button"
               />
               <img
-                class="vs-control-button video-disable"
+                class="vs-control-button button video-disable"
                 src="./imgs/Right-sidebar/Vector.svg"
                 alt="Video Button"
               />
@@ -170,6 +188,7 @@
           <li class="container">
             <div class="container">
               <img
+                class="button"
                 src="./imgs/Right-sidebar/avatar.svg"
                 alt="Participant Avatar"
               />
@@ -177,12 +196,12 @@
             </div>
             <div class="container video-sound-control-buttons">
               <img
-                class="vs-control-button mic-disable"
+                class="vs-control-button button mic-disable"
                 src="./imgs/Right-sidebar/Vector-1.svg"
                 alt="Microphone button"
               />
               <img
-                class="vs-control-button video-disable"
+                class="vs-control-button button video-disable"
                 src="./imgs/Right-sidebar/Vector.svg"
                 alt="Video Button"
               />
@@ -191,6 +210,7 @@
           <li class="container">
             <div class="container">
               <img
+                class="button"
                 src="./imgs/Right-sidebar/avatar.svg"
                 alt="Participant Avatar"
               />
@@ -198,12 +218,12 @@
             </div>
             <div class="container video-sound-control-buttons">
               <img
-                class="vs-control-button mic-disable"
+                class="vs-control-button button mic-disable"
                 src="./imgs/Right-sidebar/Vector-1.svg"
                 alt="Microphone button"
               />
               <img
-                class="vs-control-button video-disable"
+                class="vs-control-button button video-disable"
                 src="./imgs/Right-sidebar/Vector.svg"
                 alt="Video Button"
               />
@@ -212,6 +232,7 @@
           <li class="container">
             <div class="container">
               <img
+                class="button"
                 src="./imgs/Right-sidebar/avatar.svg"
                 alt="Participant Avatar"
               />
@@ -219,12 +240,12 @@
             </div>
             <div class="container video-sound-control-buttons">
               <img
-                class="vs-control-button mic-disable"
+                class="vs-control-button button mic-disable"
                 src="./imgs/Right-sidebar/Vector-1.svg"
                 alt="Microphone button"
               />
               <img
-                class="vs-control-button video-disable"
+                class="vs-control-button button video-disable"
                 src="./imgs/Right-sidebar/Vector.svg"
                 alt="Video Button"
               />
@@ -237,13 +258,13 @@
           <header class="container">
             <h2 class="chat-room">Chat Room</h2>
             <img
+              class="drop-down-menu button"
               src="./imgs/Right-sidebar/down-arrow.svg"
               alt="Drop down list"
             />
           </header>
           <div class="current-writer">
-            <img src="./imgs/Right-sidebar/Icon_Edit.svg" alt="" />
-
+            <img src="./imgs/Right-sidebar/Icon_Edit.svg" alt="Writing image" />
             <p class="writers-message">
               <span class="current-writers-name">Someone's </span>is Typing...
             </p>
@@ -274,7 +295,7 @@
             <input class="input" type="text" placeholder="Message..." />
           </div>
           <img
-            class="send-button"
+            class="send-button button"
             src="./imgs/Right-sidebar/Send.svg"
             alt="Send button"
           />
